--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,13 +13,13 @@ jobs:
     name: Auto-update IERS tables
     runs-on: ubuntu-latest
     if: ${{ github.repository == 'astrofrog/astropy-iers-data' && (github.event_name == 'schedule' || github.event_name == 'workflow_dispatch') && github.ref_name == 'main' }}
+    outputs:
+      changed: ${{ steps.check.outputs.changed }}
     steps:
     - name: Checkout code
       uses: actions/checkout@v3
     - name: Download latest IERS files
       run: ./update_data.sh
-    - outputs:
-      changed: ${{ steps.check.outputs.changed }}
     - name: Check for changes
       id: check
       run: |
