TMP: test that tests are meaningful

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,6 +34,8 @@ jobs:
         git config user.name github-actions
         git config user.email github-actions@github.com
         git add astropy_iers_data/data
+        # TMP to check tests are sensitive to the new data
+        git rm -r astropy_iers_data/data
         git commit -m "Update IERS Earth rotation and leap second tables"
         git push
 
